--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-/*# sourceMappingURL=style.css.map */
+.wrapper {
+  background-image: url(../img/background_mobile.jpg);
+  background-repeat: no-repeat;
+  max-width: 1366px;
+  height: 841px;
+}
+
+.menu_heder_mobile {
+  display: flex;
+  padding: 40px 500px 20px 20px;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 140px;
+}
+.menu_heder_mobile a {
+  font-size: 30px;
+  text-decoration: none;
+  color: white;
+  line-height: 37px;
+}/*# sourceMappingURL=style.css.map */
